TextDecorationPainter::m_wavyOffset should be a float https://bugs.webkit.org/show_bug.cgi?id=177883

Reviewed by Simon Fraser.

In r194447 we extracted the text decoration painting code from InlineTextBox into
TextDecorationPainter and changed the data type of the wavy offset from float to int.
We use floating point numbers throughout the painting code and should store the wavy
offset as a float.

* rendering/TextDecorationPainter.cpp:
(WebCore::TextDecorationPainter::TextDecorationPainter): Use C++ uniform initializer
syntax to initialize member fields.
(WebCore::TextDecorationPainter::paintTextDecoration): Change int to float.
* rendering/TextDecorationPainter.h: Remove unnecessary equal initializer for m_wavyOffset
as this class has exactly one constructor and it always initializes it.

Canonical link: https://commits.webkit.org/194141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222862 268f45cc-cd09-0410-ab3c-d52691b4dbfc